--- a/config/corne.conf
+++ b/config/corne.conf
@@ -22,7 +22,7 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=150000
 
 # Disable external power when not connected to USB
-# CONFIG_ZMK_EXT_POWER_USB_ONLY=y
+CONFIG_ZMK_EXT_POWER_USB_ONLY=y
 
 ### MOUSE
 CONFIG_ZMK_MOUSE=y
