--- a/config/corne.conf
+++ b/config/corne.conf
@@ -59,3 +59,22 @@ CONFIG_ZMK_DISPLAY=y
 # esto creo que ya no es necesario
 # CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
  #CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+
+### WIDGET SETTINGS compatible SOLO con OLED
+# No Widget configurations added since nice!view has its own custom widgets
+# activar solo estos dos widgets
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+
+### HID para nice!view ePaperDisplay
+# Enable eager debouncing
+# "Eager Debouncing"
+# Trying to lower the input lag.
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
+
+### Improves compatibility with iPad
+CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
