--- a/config/corne.conf
+++ b/config/corne.conf
@@ -25,7 +25,7 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=150000
 #CONFIG_ZMK_EXT_POWER_USB_ONLY=y
 
 ### MOUSE
-CONFIG_ZMK_MOUSE=y
+#CONFIG_ZMK_MOUSE=y
 
 ### RGB UNDERGLOW
 # uncomment to enable RGB Underglow or backlight
