--- a/config/corne.conf
+++ b/config/corne.conf
@@ -7,7 +7,7 @@
 
 ### Keyboard name
 # 1 nice
-CONFIG_ZMK_KEYBOARD_NAME="corne fran"
+CONFIG_ZMK_KEYBOARD_NAME="Corne Fran"
 
 
 ### Boost Bluetooth TX power, also make Bluetooth stronger
